SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/Territory_Mapping_Condition__c.object-meta.xml
<CustomObject>
    <description>Condition for Territory Mapping Condition Set</description>
    <label>Territory Mapping Condition</label>
    <nameField>
        <label>Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Mapping Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>