SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/fields/Case_Insensitive__c.field-meta.xml
<CustomField>
    <fullName>Case_Insensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, the text case of Source Field's value and the text case of the Eligible/Ineligible Values will be irrelevant</description>
    <inlineHelpText>If TRUE, the text case of Source Field's value and the text case of the Eligible/Ineligible Values will be irrelevant</inlineHelpText>
    <label>Case Insensitive</label>
    <type>Checkbox</type>
</CustomField>