SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/fields/Eligible_Values__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Values__c</fullName>
    <description>Semi-colon delineated list of Values that the Source Field may match in order to pass the condition</description>
    <inlineHelpText>Values that the Source Field may match in order to pass the condition</inlineHelpText>
    <label>Eligible Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>