SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/fields/Ineligible_Values__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Values__c</fullName>
    <description>Semi-colon delineated list of Values that the Source Field cannot match in order to pass the condition</description>
    <inlineHelpText>Values that the Source Field cannot match in order to pass the condition</inlineHelpText>
    <label>Ineligible Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>