SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Condition is active and currently enforced in Set</description>
    <inlineHelpText>Determines if Condition is active and currently enforced in Set</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>