SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>Field API name for field that should be evaluated for the condition</description>
    <inlineHelpText>Field API name for field that should be evaluated for the condition</inlineHelpText>
    <label>Source Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>