SFDC_LD_Packages/TerritoryMapping/main/default/objects/Territory_Mapping_Condition__c/fields/Territory_Mapping_Condition_Set__c.field-meta.xml
<CustomField>
    <fullName>Territory_Mapping_Condition_Set__c</fullName>
    <description>Condition Set in which this condition is evaluated</description>
    <inlineHelpText>Condition Set in which this condition is evaluated</inlineHelpText>
    <label>Condition Set</label>
    <referenceTo>Territory_Mapping_Condition_Set__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Territory_Mapping_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>